[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "mpich ; platform_system in '[Linux, Darwin]'",
    "impi-devel ; platform_system == 'Windows'"
]
build-backend = "scikit_build_core.build"

[project]
name = "khiops-core"
description = "Khiops is a data preparation and scoring tool for supervised learning and unsupervised learning."
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
authors = [{name = "The Khiops Team", email = "khiops.team@orange.com"}]
requires-python = ">=3.9"
dependencies = [
    "mpich ; platform_system in '[Linux, Darwin]'",
    "impi-rt ; platform_system == 'Windows'"
]
dynamic = ["version"]

[tool.scikit-build]
# Neither Python code nor CPython library usage in this package so we specify full compatibility with all Python 3 releases
wheel.py-api = "py3"
# Read CMake minimal version from file
cmake.version = "CMakeLists.txt" 
# Generator specification and build configuration
cmake.args = ["-G", "Ninja"]
# CMake variables
cmake.define.CMAKE_BUILD_TYPE = "Release"
# Options
cmake.define.MPI = true
cmake.define.TESTING = false
cmake.define.BUILD_LEX_YACC = false
cmake.define.BUILD_JARS = false
cmake.define.GENERATE_VIEWS = false
cmake.define.C11 = true
# Force the use of Ninja for fast builds
ninja.make-fallback = false
# Only install KHIOPS_CORE component in wheel
install.components = ["KHIOPS_CORE"]

[tool.scikit-build.metadata]
# Read package version from file, adapt it for Python version specification
version.provider = "scikit_build_core.metadata.regex"
version.input = "src/Learning/KWUtils/KWKhiopsVersion.h"
# Example #define PP-instruction: #define KHIOPS_VERSION KHIOPS_STR(10.5.0-a.1)
# Example version string: 10.5.0-a.1
# Python equivalent: 10.5.0a1
version.regex = '''(?x)
    \# \s* define \s+ KHIOPS_VERSION \s+ KHIOPS_STR
    \(
    (?P<major> \d+)
    \.
    (?P<minor> \d+)
    \.
    (?P<patch> \d+)
    (?:
        -
        (?P<prereltype> a | b | rc)
        \.
        (?P<prereln> \d+)
    )?
    \)
'''
version.result = "{major}.{minor}.{patch}{prereltype}{prereln}"
version.remove = "(None){,2}$"  # prereltype and prereln groups are None if not found

[tool.cibuildwheel]
# Build wheel with CPython 3.9 only since other versions would give similar wheels
build = "cp39*"
# Khiops does not compile when using musl as the C standard library
skip = "*musllinux*"
