file(GLOB cppfiles *.cpp)
add_executable(Parallel_mpi_test ${cppfiles})
set_khiops_options(Parallel_mpi_test)
target_compile_definitions(Parallel_mpi_test PRIVATE USE_MPI)
target_compile_definitions(Parallel_mpi_test PUBLIC MPI_DEV)
target_link_libraries(Parallel_mpi_test GTest::gtest_main PLParallelTask PLSamples PLMPI)
target_include_directories(Parallel_mpi_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${MPI_CXX_INCLUDE_PATH})
target_compile_options(Parallel_mpi_test PUBLIC ${GTEST_CFLAGS})
include(GoogleTest)
gtest_discover_tests(Parallel_mpi_test)
