file(GLOB cppfiles *.cpp)
add_executable(Parallel_test ${cppfiles})
set_khiops_options(Parallel_test)
# target_compile_definitions(Parallel_test PRIVATE USE_MPI)
target_compile_definitions(Parallel_test PUBLIC MPI_DEV)
target_link_libraries(Parallel_test GTest::gtest_main PLParallelTask PLSamples)
target_compile_options(Parallel_test PUBLIC ${GTEST_CFLAGS})
include(GoogleTest)
gtest_discover_tests(Parallel_test)
